<resources>
    <string name="app_name">长江车主</string>
    <string name="must_permission">必要的权限</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="reset_pwd">重置密码</string>
    <string name="sure">确 定</string>
    <string name="cancel">取消</string>
    <string name="login_in">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="newuser_register">新用户注册</string>
    <string name="please_input_phonenumber">请输入11位手机号码</string>
    <string name="please_input_pwd">请设置密码(不少于6位)</string>
    <string name="please_input_loginPwd">请输入密码</string>
    <string name="please_input_verification_code">请输入短信验证码</string>
    <string name="input_new_pwd">请设置新密码(不少于6位)</string>
    <string name="please_input_sure_new_pwd">请确认密码</string>
    <string name="input_sure_pwd">确认密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="real_name">真实姓名:</string>
    <string name="telephone_number">联系电话:</string>
    <string name="identity_card">身份证号:</string>
    <string name="tongyi">同意</string>
    <string name="agreement">《移动和车连认证服务协议》</string>
    <string name="next">下一步</string>
    <string name="certification">实名认证</string>
    <string name="add_car">添加车辆</string>
    <string name="car_identity_num">车辆识别码：</string>
    <string name="car_num">车牌号：</string>
    <string name="car_brand">车辆品牌：</string>
    <string name="car_type">车辆型号：</string>
    <string name="car_color">车辆颜色：</string>
    <string name="bindcar">添加绑定车辆</string>
    <string name="select_car">选择车辆</string>
    <string name="phone_not_right">请输入正确的手机号码</string>
    <string name="totalMile">累计里程</string>
    <string name="totalVoltage">总电压</string>
    <string name="totalElectri">电流</string>
    <string name="phone_cant_empty">手机号码不能为空</string>
    <string name="personal_info">个人信息</string>
    <string name="verificationCode_cant_empty">请输入验证码</string>
    <string name="pwd_not_right">请设置密码</string>
    <string name="pwd_too_short">密码不少于6位</string>
    <string name="pwd_should_same">两次输入的密码不一致</string>
    <string name="login_fail">登录失败</string>
    <string name="connect_overTime">请求超时</string>
    <string name="login_overTime">登录超时</string>
    <string name="server_error">服务器异常!</string>
    <string name="param_miss">参数缺失</string>
    <string name="login_in_success">登录成功</string>
    <string name="audit_result">审核结果</string>
    <string name="put_certification_photo">上传证件照</string>
    <string name="home">首页</string>
    <string name="lookcar">寻车</string>
    <string name="carroutes">行程记录</string>
    <string name="personal">个人中心</string>
    <string name="get_identity_code_success">获取验证码成功</string>
    <string name="get_identity_code_fail">获取验证码失败</string>
    <string name="certification_data">认证资料</string>
    <string name="change_car">切换车辆</string>
    <string name="air_control">空调控制</string>
    <string name="remove_car">解绑车辆</string>
    <string name="connect_fail_and_check_net">连接失败,请检查网络状况!</string>
    <string name="suggestion_back">意见反馈</string>
    <string name="setting">设置</string>
    <string name="check_update">检查更新</string>
    <string name="wifi_check_update">WIFI情况下自动更新</string>
    <string name="change_pwd">修改密码</string>
    <string name="reset_pin">重置PIN码</string>
    <string name="change_pin">修改PIN码</string>
    <string name="sim_info">套餐信息</string>
    <string name="sim_info_search">SIM卡套餐查询</string>
    <string name="sim_charge">SIM卡充值缴费</string>
    <string name="carNum_recognition">车辆识别码:</string>
    <string name="car_historyRoutes">车辆历史行驶记录查询</string>
    <string name="wifi_control_remote">WIFI热点远程控制</string>
    <string name="set_wifi_name_and_pwd">设置热点名称和密码</string>
    <string name="car_historyRoutes_title">历史行驶记录</string>
    <string name="change_phone_number">更改手机号码</string>
    <string name="please_input_suggestionBack">请先输入反馈内容</string>
    <string name="choose_change_car">请选择您需要切换的车辆</string>
    <string name="choose_look_info_car">请选择您需要查看信息的车辆</string>
    <string name="choose_unband_car">请选择您需要解绑的车辆</string>
    <string name="look_for_carInfo">是否切换查看该车辆信息?</string>
    <string name="please_select_Photo">请先选择证件照</string>
    <string name="email_address">更改邮箱地址</string>
    <string name="email_address_point">邮箱地址：</string>
    <string name="emergence_info">紧急联系人信息</string>
    <string name="emergence_name">紧急联系人姓名：</string>
    <string name="user_not_exsit">您的手机号码还未注册</string>
    <string name="password_error">账号或密码错误</string>
    <string name="please_wait">请稍后...</string>
    <string name="sorry_yourPhone_hasRegisted">您的手机号码已注册</string>
    <string name="vertificationCode_err">验证码错误</string>
    <string name="accoount_exsit">账号已存在</string>
    <string name="login_outTime">登录过期，请重新登录</string>
    <string name="request_fail">请求失败</string>
    <string name="load_personinfo_fail">加载个人信息失败</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="upload_icon_fail">修改头像失败</string>
    <string name="upload_icon_success">修改头像成功</string>
    <string name="selet_photo_fail">选择照片失败</string>
    <string name="reset_pwd_fail">重置密码失败</string>
    <string name="reset_pwd_success">修改密码成功</string>
    <string name="appointment_open_air">正在预约开启空调...</string>
    <string name="open_air_ing">正在开启空调...</string>
    <string name="appointment_open_air_fail">预约空调失败</string>
    <string name="open_air_fail">开启空调失败</string>
    <string name="pin_error_cant_oder">PIN码错误</string>
    <string name="device_not_online">终端不在线</string>
    <string name="appointment_open_air_success">预约开启空调成功</string>
    <string name="open_air_success">开启空调成功</string>
    <string name="appointment_time">预约时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="location_fail_open_gps">定位失败,请开启GPS重新定位!</string>
    <string name="buy_service_fail">订购失败</string>
    <string name="buy_service_success">订购成功</string>
    <string name="noknow">未知</string>
    <string name="unsubscribe_fail">退订失败</string>
    <string name="unsubcribe_success">退订成功</string>
    <string name="please_buy_service_before">您暂未订购该业务,请前往个人中心订购!</string>
    <string name="voice_ing">正在鸣笛中...</string>
    <string name="light_ing">闪灯已开启</string>
    <string name="open_all_door_ing">正在开启全部车门..</string>
    <string name="open_door_fail">开启车门失败</string>
    <string name="close_all_door_ing">正在闭关全部车门...</string>
    <string name="close_all_door_fail">关闭全部车门失败</string>
    <string name="open_drive_door_ing">正在开启驾驶车门...</string>
    <string name="open_drive_door_fail">开启驾驶车门失败</string>
    <string name="close_drive_door_ing">正在关闭驾驶车门...</string>
    <string name="close_drive_door_fail">关闭驾驶车门失败</string>
    <string name="open_trunk_ing">正在开启后备箱...</string>
    <string name="open_trunk_fail">开启后备箱失败</string>
    <string name="open_window_ing">正在开启车窗...</string>
    <string name="open_carWindow_fail">开启车窗失败</string>
    <string name="open_sky_window_ing">正在开启天窗...</string>
    <string name="open_skyWindow_fail">开启天窗失败</string>
    <string name="open_car_and_sky_window_ing">正在开启车窗和天窗...</string>
    <string name="open_car_and_sky_window_fail">开启车窗和天窗失败</string>
    <string name="close_car_window_ing">正在关闭车窗...</string>
    <string name="close_car_window_fail">关闭车窗失败</string>
    <string name="close_sky_window_ing">正在关闭天窗...</string>
    <string name="close_sky_window_fail">关闭天窗失败</string>
    <string name="close_car_and_sky_window_ing">正在关闭车窗和天窗...</string>
    <string name="close_car_and_sky_window_fail">关闭车窗和天窗失败</string>
    <string name="open_light_ing">正在开启闪灯...</string>
    <string name="open_light_fail">开启闪灯失败</string>
    <string name="open_voice_ing">正在开启鸣笛...</string>
    <string name="open_voice_fail">开启鸣笛失败</string>
    <string name="close_air_ing">正在关闭空调...</string>
    <string name="close_air_fail">关闭空调失败</string>
    <string name="get_car_info_fail">获取车辆数据失败</string>
    <string name="refresh_success">刷新成功</string>
    <string name="error">异常</string>
    <string name="open_all_door_fail">开启全部车门失败</string>
    <string name="open_all_door_success">全部车门已开启</string>
    <string name="close_door_success">全部车门已关闭</string>
    <string name="open_drive_door_success">驾驶车门已开启</string>
    <string name="close_drive_door_success">驾驶车门已关闭</string>
    <string name="open_trunk_success">后备箱已开启</string>
    <string name="open_car_window_success">车窗已开启</string>
    <string name="open_sky_window_success">天窗已开启</string>
    <string name="open_car_and_sky_window_success">车窗和天窗已开启</string>
    <string name="close_car_window_success">车窗已关闭</string>
    <string name="close_sky_window_success">天窗已关闭</string>
    <string name="close_car_and_sky_window_success">车窗和天窗已关闭</string>
    <string name="light_open_ing">闪灯已开启</string>
    <string name="finish_light">闪灯已完成</string>
    <string name="voice_open_ing">鸣笛已开启</string>
    <string name="voice_finish">鸣笛已完成</string>
    <string name="close_air_success">空调已关闭</string>
    <string name="pin_error">PIN码错误</string>
    <string name="you_refuse_permission_not_location">您拒绝了权限,将无法定位!</string>
    <string name="work_road_fail">步行路线规划失败</string>
    <string name="ride_road_fail">骑行路线规划失败</string>
    <string name="location_fail_cant_guide">定位失败,不能导航</string>
    <string name="please_select_way">请先选择路线类型</string>
    <string name="ride_road_planning">骑行路线规划中...</string>
    <string name="location_fail">定位失败,无法规划路线</string>
    <string name="walk_road_planning">步行路线规划中...</string>
    <string name="not_get_location">未获取到车辆位置</string>
    <string name="pin_error_2">PIN码错误</string>
    <string name="tips_begintime_over_endtime">提示:开始时间必须小于等于结束时间</string>
    <string name="tips_time_too_long">查询时间不能大于7天</string>
    <string name="email">邮箱</string>
    <string name="save">保存</string>
    <string name="name">姓名</string>
    <string name="phone">电话号码</string>
    <string name="get_emailCode_fail">获取验证码失败,请重试</string>
    <string name="email_code">邮箱验证</string>
    <string name="history_suggestion">历史反馈</string>
    <string name="icon">头像</string>
    <string name="input_suggestion_fail">提交失败,请重新提交</string>
    <string name="input_suggestion_success">已经提交您的宝贵意见,谢谢!</string>
    <string name="input_password_first">请输入登录密码</string>
    <string name="password_eeor">密码错误</string>
    <string name="login_out_fail">退出登录失败</string>
    <string name="reset_pin_fail">重置PIN码失败</string>
    <string name="reset_pin_success">新PIN码已通过短信发送给您</string>
    <string name="get_car_location_fail">获取车辆位置失败</string>
    <string name="change_pwd_fail">修改密码失败</string>
    <string name="originl_pwd_wrong">原密码错误</string>
    <string name="change_pwd_success">修改密码成功</string>
    <string name="change_pin_fail">修改PIN码失败</string>
    <string name="change_pin_success">修改PIN码成功</string>
    <string name="orignal_pin_error">原PIN码错误</string>
    <string name="code_out_time">验证码错误</string>
    <string name="change_bind_car_fail">切换车辆失败</string>
    <string name="change_bind_car_success">切换车辆成功</string>
    <string name="release_bind_car_sucesss">解绑车辆成功</string>
    <string name="tips">提示</string>
    <string name="are_you_add">确认添加吗?</string>
    <string name="add_car_need_certification">添加车辆需要对车辆进行实名认证</string>
    <string name="is_new_version">当前版本为最新版本!</string>
    <string name="get_new_verison_fail">获取新版本失败</string>
    <string name="open_wifi_fail">开启WIFI失败</string>
    <string name="close_wifi_fail">关闭WIFI失败</string>
    <string name="open_wifi_success">开启WIFI成功</string>
    <string name="close_wifi_success">关闭WIFI成功</string>
    <string name="no_data">暂无数据</string>
    <string name="unknow_location">未知地点</string>
    <string name="please_select_right_time">请选择正确的预约时间</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="load_car_success">加载车辆数据成功</string>
    <string name="please_input_newpwd">请设置新密码</string>
</resources>