<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <com.sihaiwanlian.baseproject.widget.XEditText
        android:id="@+id/forgetpwd_et_iphone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/btn_register_bg"
        android:drawableLeft="@drawable/iphone"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/please_input_phonenumber"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:textColorHint="@color/_999"
        android:textSize="@dimen/text_size_14"
        app:x_clearDrawable="@drawable/close_2"
        app:x_disableClear="false"
        tools:ignore="RtlHardcoded"/>

    <com.sihaiwanlian.baseproject.widget.XEditText
        android:id="@+id/forgetpwd_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_register_bg"
        android:drawableLeft="@drawable/pass_word"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/input_new_pwd"
        android:inputType="textPassword"
        android:maxLength="19"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:textColorHint="@color/_999"
        android:textSize="@dimen/text_size_14"
        app:x_clearDrawable="@drawable/close_2"
        app:x_disableClear="false"
        tools:ignore="RtlHardcoded"/>

    <com.sihaiwanlian.baseproject.widget.XEditText
        android:id="@+id/forgetpwd_et_sure_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_register_bg"
        android:drawableLeft="@drawable/pass_word"
        android:drawablePadding="@dimen/dp_10"
        android:hint="请确认密码"
        android:inputType="textPassword"
        android:maxLength="19"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:textColorHint="@color/_999"
        android:textSize="@dimen/text_size_14"
        app:x_clearDrawable="@drawable/close_2"
        app:x_disableClear="false"
        tools:ignore="RtlHardcoded"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_register_bg"
        android:orientation="horizontal">

        <com.sihaiwanlian.baseproject.widget.XEditText
            android:id="@+id/forgetpwd_et_certificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_100"
            android:background="@null"
            android:drawableLeft="@drawable/yan_icon"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/please_input_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/_999"
            android:textSize="@dimen/text_size_14"
            app:x_clearDrawable="@drawable/close_2"
            app:x_disableClear="false"
            tools:ignore="RtlHardcoded"/>

        <com.sihaiwanlian.baseproject.widget.CountDownButton
            android:id="@+id/forgetpwd_CountDownButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_2"
            android:paddingRight="@dimen/dp_2"
            android:text="@string/get_verification_code"
            android:textAllCaps="false"
            android:textColor="@color/barcolor"
            android:textSize="@dimen/text_size_16"
            app:countDown="60000"
            app:countDownFormat="%ds后重试"
            app:countDownInterval="1000"
            app:enableCountDown="false"
            tools:ignore="RelativeOverlap"/>
    </RelativeLayout>


    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/forgetpwd_btn"
        style="@style/btn_size20_white_margin60"
        android:layout_marginBottom="@dimen/dp_25"
        android:background="@drawable/bg_botton_shape_selector"
        android:text="@string/sure"/>
</LinearLayout>
